Terminando post y inicio

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -204,7 +204,7 @@
       font-size 2.5rem
       margin .3em 0
     &-single
-      font-size 3.4rem
+      font-size 5.4rem
       line-height 2.7rem
 
 @media (min-width: 1024px)
@@ -236,6 +236,12 @@
     font-size 1.2rem
   &-social
     text-align center
+  img
+    max-width 100%
+    width auto
+    height auto
+    display block
+    margin 0 auto
 .tags
   background transparent
   display inline-block
