--- a/partials/card-author.hbs
+++ b/partials/card-author.hbs
@@ -1,7 +1,7 @@
 {{!-- card-author --}}
 
 <div class="CardAuthor">
-  <img src="./assets/images/photoauthor.jpg" alt="" class="CardAuthor-photo">
+  <img src="{{asset "images/photoauthor.jpg"}}" alt="" class="CardAuthor-photo">
   <h4 class="CardAuthor-name">Alexei Mamani</h4>
   <p class="CardAuthor-subtitle">Developer</p>
   <p class="CardAuthor-description">Me gusta demasiado la programación, amante de la música, UI/UX algo que me encanta demasiado, autodidacta, videojuegos tipo MOBA, le estoy agarrando gusto a la fotografía</p>
