--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,14 +4,14 @@
     <div class="MainFooter-top">
       <div class="MainFooter-col2">
         <a href="{{@blog.url}}">
-          <img src="./assets/images/logoTextAzul.png" alt="Logo Alexei" class="imgLogoFooter">
+          <img src="{{asset "images/logoTextAzul.png"}}" alt="Logo Alexei" class="imgLogoFooter">
         </a>
         <p class="text">{{@blog.description}}</p>
       </div>
 
       <div class="MainFooter-col2">
         <a href="http://www.vultr.com/?ref=6877234">
-          <img src="./assets/images/logoVultr.png" alt="Logo Vultr" class="imgLogoFooter">
+          <img src="{{asset "images/logoVultr.png"}}" alt="Logo Vultr" class="imgLogoFooter">
         </a>
 
         <p class="text">Publicado en <a href="#">Ghost</a> y Alojado en <a href="http://www.vultr.com/?ref=6877234">Vultr</a> </p>
