--- a/partials/feed-social.hbs
+++ b/partials/feed-social.hbs
@@ -12,7 +12,7 @@
     Sigueme
   </a>
 </div>
-<div class="FeedSocial FeedSocial--instagram" style="background: linear-gradient(to bottom, rgba(0,0,0,.57) 0%,rgba(0,0,0,0.35) 50%,rgba(0,0,0,0.77) 100%), url('./assets/images/photoauthor.jpg'); background-size: cover;)">
+<div class="FeedSocial FeedSocial--instagram" style="background: linear-gradient(to bottom, rgba(0,0,0,.57) 0%,rgba(0,0,0,0.35) 50%,rgba(0,0,0,0.77) 100%), url('{{asset "images/photoauthor.jpg"}}'); background-size: cover;)">
   <div class="FeedSocial-top">
     <p class="FeedSocial-textTop">
       Instagram feed
