--- a/partials/header-single.hbs
+++ b/partials/header-single.hbs
@@ -1,5 +1,6 @@
-{{!-- header --}}
-{{#foreach posts limit="1"}}
+{{!-- header-single --}}
+
+
 <div class="CoverFull" style="background: linear-gradient(to bottom, rgba(0,0,0,.77) 0%,rgba(0,0,0,0.35) 50%,rgba(0,0,0,0.77) 100%), url({{image}}); background-size: cover; background-attachment: fixed; ">
   <header class="Layout-header Layout-wrapper">
     {{!-- top-header --}}
@@ -9,9 +10,8 @@
     {{> main-menu }}
 
     {{!-- post-full --}}
-      {{> post-full}}
+    {{> post-full-single }}
 
   </header>
 
 </div>
-{{/foreach}}
