Añadiendo nuevas tareas a gulp

--- a/default.hbs
+++ b/default.hbs
@@ -25,6 +25,7 @@
 
 
   <link rel="stylesheet" href="{{asset "css/style.css"}}">
+  <link rel="stylesheet" href="{{asset "css/vendor/vendor.css"}}">
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600,600italic,700|Kanit:400,400italic,600,700,700italic,500,500italic' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -44,9 +45,8 @@
   {{!-- footer --}}
   {{> footer}}
 
-   <script type="text/javascript" src="{{asset "js/alexei.js"}}">
-
-   </script>
+   <script type="text/javascript" src="{{asset "js/alexei.js"}}"></script>
+   <script type="text/javascript" src="{{asset "js/vendor/vendor.js"}}" ></script>
    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-570448c319f3025f"></script>
    <script id="dsq-count-scr" src="//alexeimpro.disqus.com/count.js" async></script>
 </body>
