add search for ghost hunter

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -396,6 +396,7 @@
 
 .WidgetText
   margin-top 1em
+  text-align center
 
 .SuscribeWidget
   padding 1em
@@ -561,6 +562,10 @@
     font-size 3em
     &:focus
       outline none
+  &-resultLink
+    font-size 1.5em
+    font-weight 600
+    display block
 
 
 // ************ Other
