--- a/default.hbs
+++ b/default.hbs
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   {{ghost_head}}
+
 </head>
 <body>
 
@@ -46,19 +47,21 @@
 
   {{!-- footer --}}
   {{> footer}}
-
-  <script type="text/javascript" src="{{asset "js/alexei.js"}}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script type="text/javascript" src="{{asset "js/vendor/vendor.js"}}" ></script>
+  <script type="text/javascript" src="{{asset "js/alexei.js"}}"></script>
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-570448c319f3025f"></script>
   <script id="dsq-count-scr" src="//alexeimpro.disqus.com/count.js" async></script>
   <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.5&appId=760193344109632";
-  fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
-  
+  <script>
+    (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.5&appId=760193344109632";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+
 </body>
 </html>
