--- a/partials/search-fix.hbs
+++ b/partials/search-fix.hbs
@@ -4,10 +4,12 @@
   </p>
   <div class="SearchFix-wrapper">
     <form action="" class="SearchFix-form">
-      <input type="text" class="SearchFix-input" placeholder="Buscar...">
+      <input type="text" class="SearchFix-input" id="search-field" placeholder="Buscar...">
     </form>
   </div>
   <div class="SearchFix-wrapper">
-    <div class="SearchFix-result"></div>
+    <div class="SearchFix-result" id="Results-GhostSearch">
+      
+    </div>
   </div>
 </div>
