fix titles and descrition

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -145,7 +145,7 @@
     text-transform lowercase
   &-title
     margin 0
-    font-size 2.5em
+    font-size 2.3em
     text-shadow: 2px 2px 0 #808080;
     a
       color white
@@ -159,6 +159,7 @@
     color white
     margin 0
     padding 0
+    display none
 
 
 @media (min-width: 768px)
@@ -206,6 +207,7 @@
     &-title
       font-size 4.5rem
       margin .3em 0
+      line-height 3.5rem
     &-single
       font-size 5.4rem
       line-height 2.7rem
