[Fix] Main Content

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -228,6 +228,7 @@
   justify-content space-between
   flex-wrap nowrap
   flex-direction column
+  align-content flex-start
 .Sidebar
   padding .5em 1.4em
 
