Add description in tablet mode

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -212,6 +212,8 @@
       font-size 5.4rem
       line-height 2.7rem
       font-weight: bolder;
+    &-description
+      display block
 
 
 @media (min-width: 1024px)
