fix - Modo tablet responsive .Main

--- a/assets/stylus/style.styl
+++ b/assets/stylus/style.styl
@@ -453,6 +453,7 @@
     width 70%
     padding 1em
     flex-wrap wrap
+    justify-content flex-start
   .Sidebar
     margin-top 1.4em
     width 320px
